added meta tags

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
     <button class="w drum">w</button>
@@ -20,12 +20,10 @@
     <button class="k drum">k</button>
     <button class="l drum">l</button>
   </div>
-
-
   <footer>
     <span id="para">Made with ❤️ By Shiv.</span>
   </footer>
   <script src="index.js"></script>
 </body>
-
 </html>
+
